--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
   # no reason, I just want to avoid midnight
-    - cron: "05 01 * * *"
+    - cron: "10 0 1 * *"
 defaults:
   run:
     working-directory: ./watcher
